# algorithm

rust/: fizzbuzz.rs
rust/bucket_sort_with_bits/: Cargo.toml
rust/bucket_sort_with_bits/src/: bucket_sort.rs  generate.rs  lib.rs  main.rs  utils.rs
